--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Launch countdown timer</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="title"></div>
+        <div class="launch-timer">
+            <div class="each-unit">
+                <div class="each-unit__value">08</div>
+                <div class="each-unit__name">DAYS</div>
+            </div>
+            <div class="each-unit">
+                <div class="each-unit__value">23</div>
+                <div class="each-unit__name">HOURS</div>
+            </div>
+            <div class="each-unit">
+                <div class="each-unit__value">55</div>
+                <div class="each-unit__name">MINUTES</div>
+            </div>
+            <div class="each-unit">
+                <div class="each-unit__value">41</div>
+                <div class="each-unit__name">SECONDS</div>
+            </div>
+        </div>
+        <div class="footer"></div>
+    </div>
 </body>
 
 </html>
